--- a/mysite/dashboard/templates/food/detail.html
+++ b/mysite/dashboard/templates/food/detail.html
@@ -1,10 +1,7 @@
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-
-<form action="{% url 'dashboard:detail' food.id %}" method="post">
-{% csrf_token %}
-{% for choice in food.contact.all %}
-<!--    <input type="radio" name="choice" id="contact{{ forloop.counter }}" value="{{ contact.id }}">-->
-<!--    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>-->
-{% endfor %}
-<input type="submit" value="Vote">
-</form>
+{% extends "base.html" %}
+{% block title %}Food{% endblock %}
+{% block content %}
+<table><tr>
+    <td>{{food.restaurant}}</td><td>{{food.dishes}}</td><td>{{food.mode}}</td><td>{{food.contact}}</td>
+</tr></table>
+{% endblock %}
