Added baseline CSS stuff and also began the implementation of medication stuff.

--- a/mysite/dashboard/templates/food/index.html
+++ b/mysite/dashboard/templates/food/index.html
@@ -1,16 +1,17 @@
 {% extends "base.html" %}
 {% block title %}Food{% endblock %}
 {% block content %}
-<table>
-    <tr>
+<table class="results_table">
+    <tr class="results_header">
 {% for header in headers %}
-        <td>{{header}} </td>
+        <td>{{header}}</td>
 {% endfor %}
     </tr>
 {% if food %}
-    <tr>
     {% for f in food %}
-        <td>{{ f.log_date }}</td><td>{{ f.restaurant }}</td><td>{{ f.dishes }}</td><td>{{ f.mode }}</td><td>{{ f.contact }}</td><td><a href="{% url 'dashboard:detail' f.id %}">VIEW</a></td></tr>
+       <tr class="results_row">
+           <td>{{ f.log_date }}</td><td>{{ f.restaurant }}</td><td>{{ f.dishes }}</td><td>{{ f.mode }}</td><td>{{ f.contact }}</td><td><a href="{% url 'dashboard:detail' f.id %}">VIEW</a></td>
+       </tr>
     {% endfor %}
 
 {% else %}
@@ -18,5 +19,5 @@
 {% endif %}
 </table>
 
-<a href="{% url 'dashboard:add' %}">ADD</a>
+<div class="add_log_button"><a href="{% url 'dashboard:add' %}">ADD</a></div>
 {% endblock %}
