--- a/mysite/dashboard/templates/index.html
+++ b/mysite/dashboard/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
-COVID RISK {{risk}}
+    <div id="risk_display">
+        <p>COVID RISK {{risk}}</p>
+    </div>
 {% endblock %}
