--- a/mysite/dashboard/templates/base.html
+++ b/mysite/dashboard/templates/base.html
@@ -1,11 +1,17 @@
+{% load static %}
 <!doctype html>
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/base_style.css' %}">
         <title>COVID DASHBOARD - {% block title %}My Site{% endblock %}</title>
     </head>
     <body>
-        {% include 'menu.html' %}
-        {% block content %}{% endblock %}
+        {% include 'nav_bar.html' %}
+        <div id="main_content">
+            {% block content %}{% endblock %}
+        </div>
+
     </body>
 </html>
