Food and Medicine both in an operating state. Both also allow for log deletes.

--- a/mysite/dashboard/templates/medicine/detail.html
+++ b/mysite/dashboard/templates/medicine/detail.html
@@ -2,6 +2,6 @@
 {% block title %}Medicine Detail{% endblock %}
 {% block content %}
 <table><tr>
-    <td>{{food.restaurant}}</td><td>{{food.dishes}}</td><td>{{food.mode}}</td><td>{{food.contact}}</td>
+    <td>{{medicine.type}}</td><td>{{medicine.quantity}}</td><td>{{medicine.purpose}}</td>
 </tr></table>
 {% endblock %}
