--- a/mysite/dashboard/templates/nav_bar.html
+++ b/mysite/dashboard/templates/nav_bar.html
@@ -3,7 +3,7 @@
         <l>
             <li class="main_nav_option"><a href="{% url 'dashboard:index' %}">DASHBOARD</a></li>
             <li class="main_nav_option"><a href="#">SYMPTOMS</a></li>
-            <li class="main_nav_option"><a href="#">MEDICINES</a></li>
+            <li class="main_nav_option"><a href="{% url 'dashboard:medicine_view' %}">MEDICINES</a></li>
             <li class="main_nav_option"><a href="#">DOCTOR</a></li>
             <li class="main_nav_option"><a href="#">TRIPS</a></li>
             <li class="main_nav_option"><a href="{% url 'dashboard:food_view' %}">FOOD</a></li>
