--- a/mysite/dashboard/templates/food/index.html
+++ b/mysite/dashboard/templates/food/index.html
@@ -10,14 +10,14 @@
 {% if food %}
     {% for f in food %}
        <tr class="results_row">
-           <td>{{ f.log_date }}</td><td>{{ f.restaurant }}</td><td>{{ f.dishes }}</td><td>{{ f.mode }}</td><td>{{ f.contact }}</td><td><a href="{% url 'dashboard:detail' f.id %}">VIEW</a></td>
+           <td>{{ f.log_date }}</td><td>{{ f.restaurant }}</td><td>{{ f.dishes }}</td><td>{{ f.mode }}</td><td>{{ f.contact }}</td>
+           <td><a href="{% url 'dashboard:detail_food' f.id %}">VIEW</a> | <a href="{% url 'dashboard:delete_food' f.id %}">DELETE</a></td>
        </tr>
     {% endfor %}
-
 {% else %}
     <tr>No Food Logs are available.</tr>
 {% endif %}
 </table>
 
-<div class="add_log_button"><a href="{% url 'dashboard:add' %}">ADD</a></div>
+<div class="add_log_button"><a href="{% url 'dashboard:add_food' %}">ADD</a></div>
 {% endblock %}
