--- a/mysite/dashboard/templates/menu.html
+++ b/mysite/dashboard/templates/menu.html
@@ -2,7 +2,7 @@
 <nav>
     <ul>
         <li><a href="{% url 'dashboard:index' %}">DASHBOARD</a></li>
-        <li><a href="#">SYMPTOMS</a></li>
+        <li><a href="{% url 'dashboard:view_symptom' %}">SYMPTOMS</a></li>
         <li><a href="#">MEDICINES</a></li>
         <li><a href="#">DOCTOR</a></li>
         <li><a href="{% url 'dashboard:view' %}">Food</a></li>
