--- a/mysite/dashboard/templates/base.html
+++ b/mysite/dashboard/templates/base.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>COVID DASHBOARD - {% block title %}My Site{% endblock %}</title>
+        <title>COVID DASHBOARD</title>
     </head>
     <body>
         {% include 'menu.html' %}
