--- a/mysite/dashboard/templates/symptom/index.html
+++ b/mysite/dashboard/templates/symptom/index.html
@@ -17,5 +17,5 @@
 {% endif %}
 </table>
 
-<a href="{% url 'dashboard:add_symptom' %}">ADD</a>
+<a href="{% url 'dashboard:symptom_add' %}">ADD</a>
 {% endblock %}
