--- a/mysite/dashboard/templates/nav_bar.html
+++ b/mysite/dashboard/templates/nav_bar.html
@@ -2,7 +2,7 @@
     <nav>
         <l>
             <li class="main_nav_option"><a href="{% url 'dashboard:index' %}">DASHBOARD</a></li>
-            <li class="main_nav_option"><a href="{% url 'dashboard:symptom_view' %}">SYMPTOMS</a></li>
+            <li class="main_nav_option"><a href="{% url 'dashboard:view_symptom' %}">SYMPTOMS</a></li>
             <li class="main_nav_option"><a href="{% url 'dashboard:medicine_view' %}">MEDICINES</a></li>
             <li class="main_nav_option"><a href="#">DOCTOR</a></li>
             <li class="main_nav_option"><a href="#">TRIPS</a></li>
