Brushed up some CSS

--- a/mysite/dashboard/templates/symptom/index.html
+++ b/mysite/dashboard/templates/symptom/index.html
@@ -1,15 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
-<table>
-    <tr>
+<table class="results_table">
+    <tr class="results_header">
 {% for header in headers %}
-        <td>{{header}} </td>
+        <th>{{header}} </th>
 {% endfor %}
     </tr>
 {% if symptoms %}
-    <tr>
+
     {% for s in symptoms %}
-        <td>{{ s.date }}</td><td>{{ s.type }}</td><td>{{ s.severity }}</td><td>{{ s.notes }}</td><td><a href="{% url 'dashboard:delete_symptom' s.id %}">DELETE</a></td></tr>
+        <tr class="results_row">
+        <td>{{ s.date }}</td><td>{{ s.type }}</td><td>{{ s.severity }}</td><td>{{ s.notes }}</td><td><a href="{% url 'dashboard:delete_symptom' s.id %}">DELETE</a></td>
+        </tr>
     {% endfor %}
 
 {% else %}
@@ -17,5 +19,5 @@
 {% endif %}
 </table>
 
-<a href="{% url 'dashboard:add_symptom' %}">ADD</a>
+<div class="add_log_button"><a href="{% url 'dashboard:add_symptom' %}">ADD</a></div>
 {% endblock %}
