Major CSS improvements, namely to the results table and add log form of each log type instance.

--- a/mysite/dashboard/static/css/base_style.css
+++ b/mysite/dashboard/static/css/base_style.css
@@ -52,19 +52,24 @@ li a:hover {
 #main_content {
     margin: auto;
     width: 90%;
-    border: 1px solid black;
     padding: 25px;
 }
 
 .add_log_button {
-    width: 100px;
-    height: 50px;
-    border: 1px solid gray;
-    color: black;
+    display: block;
+    width: 150px;
+    height: 40px;
+    background: lightgray;
     padding: 10px;
     text-align: center;
+    border-radius: 5px;
+    color: black;
+    font-weight: bold;
+    line-height: 25px;
     margin-top: 10px;
-    background-color: lightgray;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid #bbbbbb;
 }
 
 .add_log_button a {
@@ -72,19 +77,88 @@ li a:hover {
     text-align: center;
 }
 
-.results_row {
-    width: auto;
-    border: 1px solid orange;
-}
-
-.results_header {
-    background-color: lightgray;
-    width: auto;
-    border: 1px solid green;
-}
-
 .results_table {
+    border-collapse: separate;
+    border-spacing: 0;
+    min-width: 350px;
     width: 100%;
-    border: 1px solid red;
-    alignment: center;
+}
+.results_table tr th,
+.results_table tr td {
+    border-bottom: 1px solid #bbb;
+    padding: 5px;
+}
+.results_table tr th:first-child,
+.results_table tr td:first-child {
+    border-left: 1px solid #bbb;
+}
+.results_table tr th {
+    background: #eee;
+    border-top: 1px solid #bbb;
+    text-align: left;
+}
+
+/* top-left border-radius */
+.results_table tr:first-child th:first-child {
+    border-top-left-radius: 6px;
+}
+
+/* top-right border-radius */
+.results_table tr:first-child th:last-child  {
+    border-top-right-radius: 6px;
+    border-right: 1px solid #bbb;
+
+}
+
+/* bottom-left border-radius */
+.results_table tr:last-child td:first-child {
+    border-bottom-left-radius: 6px;
+}
+
+/* bottom-right border-radius */
+.results_table tr:last-child td:last-child {
+    border-bottom-right-radius: 6px;
+    border-right: 1px solid #bbb;
+
+}
+
+.results_table td:last-child {
+    border-right: 1px solid #bbb;
+}
+
+.add_log_header {
+    color:black;
+    font-weight: bolder;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+}
+
+form {
+    border: 1px solid black;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    background-color: lightgray;
+    border-radius: 6px;
+    padding-left: 20px;
+    padding-top: 20px;
+}
+
+.save_button {
+    display: block;
+    width: 150px;
+    height: 40px;
+    background: lightgreen;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    color: black;
+    font-weight: bold;
+    line-height: 25px;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid #bbbbbb;
+    margin-bottom: 20px;
 }
