--- a/mysite/dashboard/templates/medicine/index.html
+++ b/mysite/dashboard/templates/medicine/index.html
@@ -20,5 +20,5 @@
 {% endif %}
 </table>
 
-<div class="add_log_button"><a href="{% url 'dashboard:add_medicine' %}">ADD</a></div>
+<a class="add_log_button" href="{% url 'dashboard:add_medicine' %}">ADD</a>
 {% endblock %}
