--- a/mysite/dashboard/templates/symptom/add.html
+++ b/mysite/dashboard/templates/symptom/add.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 <form method="POST"> {% csrf_token %}
+    <label class="add_log_header">Add Food Log:</label>
     {{form.as_p}}
-    <input type="submit" value="Save" />
+    <input class="save_button" type="submit" value="Save" />
 </form>
 {% endblock %}
