--- a/mysite/dashboard/templates/symptom/index.html
+++ b/mysite/dashboard/templates/symptom/index.html
@@ -19,5 +19,5 @@
 {% endif %}
 </table>
 
-<div class="add_log_button"><a href="{% url 'dashboard:add_symptom' %}">ADD</a></div>
+<a class="add_log_button" href="{% url 'dashboard:add_symptom' %}">ADD</a>
 {% endblock %}
