--- a/mysite/dashboard/templates/nav_bar.html
+++ b/mysite/dashboard/templates/nav_bar.html
@@ -5,7 +5,7 @@
             <li class="main_nav_option"><a href="{% url 'dashboard:view_symptom' %}">SYMPTOMS</a></li>
             <li class="main_nav_option"><a href="{% url 'dashboard:medicine_view' %}">MEDICINES</a></li>
             <li class="main_nav_option"><a href="{% url 'dashboard:doctor_view' %}">DOCTOR</a></li>
-            <li class="main_nav_option"><a href="#">TRIPS</a></li>
+            <li class="main_nav_option"><a href="{% url 'dashboard:view_trip' %}">TRIPS</a></li>
             <li class="main_nav_option"><a href="{% url 'dashboard:food_view' %}">FOOD</a></li>
             <li class="main_nav_option"><a href="{% url 'dashboard:friend_view' %}">FRIENDS</a></li>
             <li class="main_nav_option"><a href="#">SYNC</a></li>
