Pushing models, views, html, etc. for items asssociated with the SYNC tab of the dashboard.

--- a/mysite/dashboard/templates/nav_bar.html
+++ b/mysite/dashboard/templates/nav_bar.html
@@ -8,7 +8,7 @@
             <li class="main_nav_option"><a href="{% url 'dashboard:view_trip' %}">TRIPS</a></li>
             <li class="main_nav_option"><a href="{% url 'dashboard:food_view' %}">FOOD</a></li>
             <li class="main_nav_option"><a href="{% url 'dashboard:friend_view' %}">FRIENDS</a></li>
-            <li class="main_nav_option"><a href="#">SYNC</a></li>
+            <li class="main_nav_option"><a href="{% url 'dashboard:view_sync' %}">SYNC</a></li>
             <a id="profile_icon" href="#"><img src="https://cdn2.iconfinder.com/data/icons/business-part-2/64/_Personal_Account_Button-512.png"></a>
         </l>
     </nav>
