--- a/mysite/dashboard/templates/symptom/add.html
+++ b/mysite/dashboard/templates/symptom/add.html
@@ -2,7 +2,10 @@
 {% block content %}
 <form method="POST"> {% csrf_token %}
     <label class="add_log_header">Add Food Log:</label>
-    {{form.as_p}}
+    <table>
+        {{form.as_table}}
+    </table>
+    <!-- {{form.as_p}} -->
     <input class="save_button" type="submit" value="Save" />
 </form>
 {% endblock %}
