Updated all log instances to map back to the log table rather than the dashboard.

--- a/mysite/dashboard/templates/nav_bar.html
+++ b/mysite/dashboard/templates/nav_bar.html
@@ -2,10 +2,10 @@
     <nav>
         <l>
             <li class="main_nav_option"><a href="{% url 'dashboard:index' %}">DASHBOARD</a></li>
-            <li class="main_nav_option"><a href="{% url 'dashboard:view_symptom' %}">SYMPTOMS</a></li>
+            <li class="main_nav_option"><a href="{% url 'dashboard:symptom_view' %}">SYMPTOMS</a></li>
             <li class="main_nav_option"><a href="{% url 'dashboard:medicine_view' %}">MEDICINES</a></li>
             <li class="main_nav_option"><a href="{% url 'dashboard:doctor_view' %}">DOCTOR</a></li>
-            <li class="main_nav_option"><a href="{% url 'dashboard:view_trip' %}">TRIPS</a></li>
+            <li class="main_nav_option"><a href="{% url 'dashboard:trip_view' %}">TRIPS</a></li>
             <li class="main_nav_option"><a href="{% url 'dashboard:food_view' %}">FOOD</a></li>
             <li class="main_nav_option"><a href="{% url 'dashboard:friend_view' %}">FRIENDS</a></li>
             <li class="main_nav_option"><a href="{% url 'dashboard:view_sync' %}">SYNC</a></li>
