Moved back to logs link to new line on success html pages. Added a general travel warning to Trip logging.

--- a/mysite/dashboard/templates/trip/success.html
+++ b/mysite/dashboard/templates/trip/success.html
@@ -2,5 +2,11 @@
 {% block title %}Trip{% endblock %}
 {% block content %}
 SAVE SUCCESSFUL
+</br>
+</br>
+<p style="color:red">NOTE THAT ALL TRAVEL DURING A PANDEMIC COMES WITH AN INHERENT RISK.
+    PLEASE EXCERCISE EXTREME CAUTION FOR THE SAFETY OF YOURSELF AND OTHERS.</p>
+</br>
+</br>
 <a href="{% url 'dashboard:trip_view' %}">Back to Logs</a>
 {% endblock %}
