updated health device as deisgned

--- a/mysite/dashboard/templates/sync/device_error.html
+++ b/mysite/dashboard/templates/sync/device_error.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Sync{% endblock %}
 {% block content %}
-DEVICE HAS ALREADY BEEN SYNCED
+{{error}}
 </br>
 </br>
 <a href="{% url 'dashboard:view_sync' %}">Back to Logs</a>
